clients/ffi/include/tarwyn.h

typedef struct Handle Handle;
int xt_publish_float(const struct Handle *handle, const char *channel, float value);
int xt_publish_int32(const struct Handle *handle, const char *channel, int32_t value);
int xt_publish_int64(const struct Handle *handle, const char *channel, int64_t value);
int xt_publish_bool(const struct Handle *handle, const char *channel, bool value);
int xt_publish_string(const struct Handle *handle, const char *channel, const char *value);
int xt_publish_bytes(const struct Handle *handle,
                     const char *channel,
                     const uint8_t *value,
                     size_t len);
int xt_get_double(const struct Handle *handle, const char *channel, double *out);