clients/java-client/gen/org/tarwyn/ffi/tarwyn_h.java


    /**
     * {@snippet lang=c :
     * int xt_publish_float(const struct Handle *handle, const char *channel, float value)
     * }
     */
    public static int xt_publish_float(MemorySegment handle, MemorySegment channel, float value) {
        var mh$ = xt_publish_float.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("xt_publish_float", handle, channel, value);
            }
            return (int)mh$.invokeExact(handle, channel, value);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class xt_publish_int32 {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            tarwyn_h.C_INT,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("xt_publish_int32");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int xt_publish_int32(const struct Handle *handle, const char *channel, int32_t value)
     * }
     */
    public static FunctionDescriptor xt_publish_int32$descriptor() {
        return xt_publish_int32.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int xt_publish_int32(const struct Handle *handle, const char *channel, int32_t value)
     * }
     */
    public static MethodHandle xt_publish_int32$handle() {
        return xt_publish_int32.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int xt_publish_int32(const struct Handle *handle, const char *channel, int32_t value)
     * }
     */
    public static MemorySegment xt_publish_int32$address() {
        return xt_publish_int32.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int xt_publish_int32(const struct Handle *handle, const char *channel, int32_t value)
     * }
     */
    public static int xt_publish_int32(MemorySegment handle, MemorySegment channel, int value) {
        var mh$ = xt_publish_int32.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("xt_publish_int32", handle, channel, value);
            }
            return (int)mh$.invokeExact(handle, channel, value);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class xt_publish_int64 {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            tarwyn_h.C_INT,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_LONG
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("xt_publish_int64");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int xt_publish_int64(const struct Handle *handle, const char *channel, int64_t value)
     * }
     */
    public static FunctionDescriptor xt_publish_int64$descriptor() {
        return xt_publish_int64.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int xt_publish_int64(const struct Handle *handle, const char *channel, int64_t value)
     * }
     */
    public static MethodHandle xt_publish_int64$handle() {
        return xt_publish_int64.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int xt_publish_int64(const struct Handle *handle, const char *channel, int64_t value)
     * }
     */
    public static MemorySegment xt_publish_int64$address() {
        return xt_publish_int64.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int xt_publish_int64(const struct Handle *handle, const char *channel, int64_t value)
     * }
     */
    public static int xt_publish_int64(MemorySegment handle, MemorySegment channel, long value) {
        var mh$ = xt_publish_int64.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("xt_publish_int64", handle, channel, value);
            }
            return (int)mh$.invokeExact(handle, channel, value);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class xt_publish_bool {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            tarwyn_h.C_INT,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_BOOL
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("xt_publish_bool");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int xt_publish_bool(const struct Handle *handle, const char *channel, bool value)
     * }
     */
    public static FunctionDescriptor xt_publish_bool$descriptor() {
        return xt_publish_bool.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int xt_publish_bool(const struct Handle *handle, const char *channel, bool value)
     * }
     */
    public static MethodHandle xt_publish_bool$handle() {
        return xt_publish_bool.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int xt_publish_bool(const struct Handle *handle, const char *channel, bool value)
     * }
     */
    public static MemorySegment xt_publish_bool$address() {
        return xt_publish_bool.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int xt_publish_bool(const struct Handle *handle, const char *channel, bool value)
     * }
     */
    public static int xt_publish_bool(MemorySegment handle, MemorySegment channel, boolean value) {
        var mh$ = xt_publish_bool.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("xt_publish_bool", handle, channel, value);
            }
            return (int)mh$.invokeExact(handle, channel, value);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class xt_publish_string {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            tarwyn_h.C_INT,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("xt_publish_string");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int xt_publish_string(const struct Handle *handle, const char *channel, const char *value)
     * }
     */
    public static FunctionDescriptor xt_publish_string$descriptor() {
        return xt_publish_string.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int xt_publish_string(const struct Handle *handle, const char *channel, const char *value)
     * }
     */
    public static MethodHandle xt_publish_string$handle() {
        return xt_publish_string.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int xt_publish_string(const struct Handle *handle, const char *channel, const char *value)
     * }
     */
    public static MemorySegment xt_publish_string$address() {
        return xt_publish_string.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int xt_publish_string(const struct Handle *handle, const char *channel, const char *value)
     * }
     */
    public static int xt_publish_string(MemorySegment handle, MemorySegment channel, MemorySegment value) {
        var mh$ = xt_publish_string.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("xt_publish_string", handle, channel, value);
            }
            return (int)mh$.invokeExact(handle, channel, value);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class xt_publish_bytes {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            tarwyn_h.C_INT,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_LONG
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("xt_publish_bytes");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int xt_publish_bytes(const struct Handle *handle, const char *channel, const uint8_t *value, size_t len)
     * }
     */
    public static FunctionDescriptor xt_publish_bytes$descriptor() {
        return xt_publish_bytes.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int xt_publish_bytes(const struct Handle *handle, const char *channel, const uint8_t *value, size_t len)
     * }
     */
    public static MethodHandle xt_publish_bytes$handle() {
        return xt_publish_bytes.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int xt_publish_bytes(const struct Handle *handle, const char *channel, const uint8_t *value, size_t len)
     * }
     */
    public static MemorySegment xt_publish_bytes$address() {
        return xt_publish_bytes.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int xt_publish_bytes(const struct Handle *handle, const char *channel, const uint8_t *value, size_t len)
     * }
     */
    public static int xt_publish_bytes(MemorySegment handle, MemorySegment channel, MemorySegment value, long len) {
        var mh$ = xt_publish_bytes.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("xt_publish_bytes", handle, channel, value, len);
            }
            return (int)mh$.invokeExact(handle, channel, value, len);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class xt_get_double {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            tarwyn_h.C_INT,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("xt_get_double");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int xt_get_double(const struct Handle *handle, const char *channel, double *out)
     * }
     */
    public static FunctionDescriptor xt_get_double$descriptor() {
        return xt_get_double.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int xt_get_double(const struct Handle *handle, const char *channel, double *out)
     * }
     */
    public static MethodHandle xt_get_double$handle() {
        return xt_get_double.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int xt_get_double(const struct Handle *handle, const char *channel, double *out)
     * }
     */
    public static MemorySegment xt_get_double$address() {
        return xt_get_double.ADDR;
    }
